Add buttons to sort age of dogs add showing of dog images

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <thead class="fixed-table_head">
             <tr>
                 <th>Name</th>
-                <th>Age (in months)</th>
+                <th class="arrow-select">
+                    <button>&#x25B2</button>
+                    Age (in months)
+                    <button>&#x25BC</button>
+                </th>
                 <th>Age (in years)</th>
                 <th>Race</th>
+                <th>dog image</th>
             </tr>
         </thead>
         <tbody class="fixed-table_body">
