Showing selected Image depeds on race of dog

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <thead class="fixed-table_head">
             <tr>
                 <th>
-                    <button onclick="sortAscedning()">&#x25B2</button>
+                    <!-- <button onclick="sortAscedning()">&#x25B2</button> -->
                     Name</th>
-                <button onclick="sortDescending()">&#x25BC</button>
+                <!-- <button onclick="sortDescending()">&#x25BC</button> -->
                 <th class="arrow-select">
                     <button onclick="sortAscedning()">&#x25B2</button>
                     Age (in months)
@@ -27,7 +27,7 @@
                 </th>
                 <th>Age (in years)</th>
                 <th>Race</th>
-                <th>dog image</th>
+                <th >dog image</th>
             </tr>
         </thead>
         <tbody class="fixed-table_body">
