--- a/index.html
+++ b/index.html
@@ -17,17 +17,22 @@
         <thead class="fixed-table_head">
             <tr>
                 <th>
-                    <!-- <button onclick="sortAscedning()">&#x25B2</button> -->
-                    Name</th>
-                <!-- <button onclick="sortDescending()">&#x25BC</button> -->
-                <th class="arrow-select">
-                    <button onclick="sortAscedning()">&#x25B2</button>
+                    Name
+                    <div valign="bottom">
+                        <button onclick="sortByFullNameAlphabetically()">&#x25B2</button>
+                        <button onclick="sortByFullNameNonAlphabetically()">&#x25BC</button>
+                    </div>
+                </th>
+                <th>
                     Age (in months)
-                    <button onclick="sortDescending()">&#x25BC</button>
+                    <div valign="bottom">
+                        <button valign="bottom" onclick="sortAscedning()">&#x25B2</button>
+                        <button onclick="sortDescending()">&#x25BC</button>
+                    </div>
                 </th>
                 <th>Age (in years)</th>
                 <th>Race</th>
-                <th >dog image</th>
+                <th>dog image</th>
             </tr>
         </thead>
         <tbody class="fixed-table_body">
