--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dogs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/modalImageStyles.css"/>
     <script src="js/main.js"></script>
 </head>
 
