Working on table styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/modalImageStyles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/bonusStyles.css" />
     <script src="js/main.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -21,7 +22,7 @@
                 <th>
                     Name
                     <div valign="bottom">
-                        <button onclick="sortByFullNameAlphabetically()">&#x25B2</button>
+                        <button onclick="sortByFullNameAlphabetically()" >&#x25B2</button>
                         <button onclick="sortByFullNameNonAlphabetically()">&#x25BC</button>
                     </div>
                 </th>
