--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </th>
                 <th>Age (in years)</th>
                 <th>Race</th>
-                <th>Inages</th>
+                <th>Images</th>
             </tr>
         </thead>
         <tbody class="fixed-table_body">
