--- a/index.html
+++ b/index.html
@@ -10,32 +10,35 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/modalImageStyles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/bonusStyles.css" />
     <script src="js/main.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
 
 
 <body class="dogs-app">
-    <h1 class="main-title"><img src="Images/dogLogo.png" alt='Logo'></h1>
+    <h1 class="main-title">
+        <img src="Images/dogLogo.png" alt='Logo'>
+    </h1>
     <table class="fixed-table" id="dogsContainer">
         <thead class="fixed-table_head">
             <tr>
-                <th class='name' onclick="loader()">
+                <th onclick="loader()">
                     Name
                     <div valign="bottom">
-                        <button onclick="sortByFullNameAlphabetically()" >&#x25B2</button>
-                        <button onclick="sortByFullNameNonAlphabetically()">&#x25BC</button>
+                        <button onclick="sortByFullNameAlphabetically()" class="btn btn-outline-light">&#x25B2</button>
+                        <button onclick="sortByFullNameNonAlphabetically()" class="btn btn-outline-light">&#x25BC</button>
                     </div>
                 </th>
                 <th>
                     Age (in months)
                     <div valign="bottom">
-                        <button valign="bottom" onclick="sortAscedning()">&#x25B2</button>
-                        <button onclick="sortDescending()">&#x25BC</button>
+                        <button valign="bottom" onclick="sortAscedning()" class="btn btn-outline-light">&#x25B2</button>
+                        <button onclick="sortDescending()" class="btn btn-outline-light">&#x25BC</button>
                     </div>
                 </th>
                 <th>Age (in years)</th>
                 <th>Race</th>
-                <th >Images</th>
+                <th>Images</th>
             </tr>
         </thead>
         <tbody class="fixed-table_body">
@@ -44,8 +47,8 @@
         <tfoot>
             <tr>
 
-                <td colspan='100%' style="text-align: center;">
-                    <button type="button" onclick="onAddDogButtonClick(event)">Add a dog</button>
+                <td colspan='100%' style="text-align: center; padding:3px;">
+                    <button type="button" onclick="onAddDogButtonClick(event)" class="btn btn-outline-light">Add a dog</button>
                 </td>
 
             </tr>
