--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/modalImageStyles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/bonusStyles.css" />
     <script src="js/main.js"></script>
+    <script src="js/dogsSorting.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/renderDogs.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 </head>
-
-
 <body class="dogs-app">
     <h1 class="main-title">
         <img src="Images/dogLogo.png" alt='Logo'>
