Fix second modal image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </table>
     <div id="doubleImage">
         <div class="dog-image-container" onclick='modalImageOfDog()' id="loading"></div>
-        <div class="dog-image-container" onclick='modalImageOfDog()' id="loading"></div>
+        <div class="dog-image-container" onclick='modalImageOfDog()' id="secondloading"></div>
     </div>
     <div id="myModal" class="modal">
         <span class="close">&times;</span>
